fixed stacking issue by changing visibility to display, and fixed content view by changing position to absolute and centering it.

--- a/playground-10-4-17/styles/home-styles-compiled.css
+++ b/playground-10-4-17/styles/home-styles-compiled.css
@@ -8,6 +8,57 @@ Developer: Trenton Brew
 Date: 10/4/2017
 Description: colors for navbar
 */
+.navbar-wrapper-mobile {
+  display: none; }
+
+body {
+  margin: 0px;
+  font-family: roboto, sans-serif; }
+
+/*the only thing needing to be specified for the navbar template are the
+  main and accent colors soecified below*/
+/*
+Developer: Trenton Brew
+Date: 10/4/2017
+Description: modular grid template for navigation bar
+*/
+.navbar-wrapper {
+  position: fixed;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  width: 100%;
+  height: 70px;
+  z-index: 1;
+  box-shadow: 0px 1px 22px -3px rgba(0, 0, 0, 0.65); }
+  .navbar-wrapper .item {
+    text-align: center;
+    padding: 10px;
+    line-height: 45px; }
+  .navbar-wrapper .nav-empty {
+    grid-column: span 4; }
+
+.navbar-wrapper {
+  background-color: #EEEEEE; }
+  .navbar-wrapper a {
+    text-decoration: none; }
+  .navbar-wrapper .selected {
+    border-bottom: solid 5px #00BCD4;
+    color: #00BCD4 !important; }
+  .navbar-wrapper .item {
+    color: #616161; }
+    .navbar-wrapper .item:hover {
+      background-color: #E0E0E0;
+      color: #00BCD4; }
+
+.content-example {
+  position: absolute;
+  background-color: gray;
+  width: 90%;
+  height: 1200px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  top: 140px; }
+
 /*
 Developer: Trent Brew
 Date: 10/5/17
@@ -15,7 +66,7 @@ Description: Mobile styles for home page
 */
 @media only screen and (max-width: 768px) {
   .navbar-wrapper {
-    visibility: hidden; }
+    display: none; }
 
   body {
     margin: 0px;
@@ -24,34 +75,23 @@ Description: Mobile styles for home page
   /*the only thing needing to be specified for the navbar template are the
    main and accent colors soecified below*/
   /*
-  Developer: Trenton Brew
-  Date: 10/4/2017
-  Description: modular grid template for navigation bar
+  Developer: Trent Brew
+  Date: 10/6/17
+  Description: navbar styles for mobile
   */
-  .navbar-wrapper {
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    width: 100%;
-    height: 70px; }
-    .navbar-wrapper .item {
-      text-align: center;
-      padding: 10px;
-      line-height: 45px; }
-    .navbar-wrapper .nav-empty {
-      grid-column: span 4; } }
-@media only screen and (max-width: 768px) and (max-width: 768px) {
   .navbar-wrapper-mobile {
     position: fixed;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     width: 100%;
-    height: 70px; }
+    height: 70px;
+    z-index: 1;
+    box-shadow: 0px 1px 22px -3px rgba(0, 0, 0, 0.65); }
     .navbar-wrapper-mobile .item {
       text-align: center;
       padding: 10px;
-      line-height: 45px; } }
-@media only screen and (max-width: 768px) {
+      line-height: 45px; }
+
   .navbar-wrapper-mobile {
     background-color: #EEEEEE; }
     .navbar-wrapper-mobile a {
@@ -63,57 +103,13 @@ Description: Mobile styles for home page
       color: #616161; }
       .navbar-wrapper-mobile .item:hover {
         background-color: #E0E0E0;
-        color: #00BCD4; } }
-@media only screen and (min-width: 768px) {
-  .navbar-wrapper-mobile {
-    visibility: hidden; }
+        color: #00BCD4; }
 
-  body {
-    margin: 0px;
-    font-family: roboto, sans-serif; }
-
-  /*the only thing needing to be specified for the navbar template are the
-   main and accent colors soecified below*/
-  /*
-  Developer: Trenton Brew
-  Date: 10/4/2017
-  Description: modular grid template for navigation bar
-  */
-  .navbar-wrapper {
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+  .content-example {
+    position: absolute;
+    background-color: gray;
     width: 100%;
-    height: 70px; }
-    .navbar-wrapper .item {
-      text-align: center;
-      padding: 10px;
-      line-height: 45px; }
-    .navbar-wrapper .nav-empty {
-      grid-column: span 4; } }
-@media only screen and (min-width: 768px) and (max-width: 768px) {
-  .navbar-wrapper-mobile {
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    width: 100%;
-    height: 70px; }
-    .navbar-wrapper-mobile .item {
-      text-align: center;
-      padding: 10px;
-      line-height: 45px; } }
-@media only screen and (min-width: 768px) {
-  .navbar-wrapper {
-    background-color: #EEEEEE; }
-    .navbar-wrapper a {
-      text-decoration: none; }
-    .navbar-wrapper .selected {
-      border-bottom: solid 5px #00BCD4;
-      color: #00BCD4 !important; }
-    .navbar-wrapper .item {
-      color: #616161; }
-      .navbar-wrapper .item:hover {
-        background-color: #E0E0E0;
-        color: #00BCD4; } }
+    height: 1200px;
+    top: 70px; } }
 
 /*# sourceMappingURL=home-styles-compiled.css.map */
