--- a/playground-10-4-17/styles/home-styles-mobile.scss
+++ b/playground-10-4-17/styles/home-styles-mobile.scss
@@ -7,9 +7,8 @@ Description: Mobile styles for home page
 //---------------------------------FOR MOBILE-----------------------------------
 
 @media only screen and (max-width: 768px) {
-
   .navbar-wrapper {
-    visibility: hidden;
+    display: none;
   }
 
   //----------body----------
@@ -24,7 +23,7 @@ Description: Mobile styles for home page
   /*the only thing needing to be specified for the navbar template are the
    main and accent colors soecified below*/
 
-  @import 'navbar';
+  @import 'navbar-mobile';
 
   .navbar-wrapper-mobile {
     background-color:$Main;
@@ -51,7 +50,13 @@ Description: Mobile styles for home page
 
   //----------content----------
 
-
+  .content-example {
+    position: absolute;
+    background-color: gray;
+    width: 100%;
+    height: 1200px;
+    top: 70px; //navbar height
+  }
 
 
 
