--- a/playground-10-4-17/styles/navbar-mobile.scss
+++ b/playground-10-4-17/styles/navbar-mobile.scss
@@ -12,6 +12,8 @@ Description: navbar styles for mobile
   grid-template-columns: repeat(4, 1fr);
   width: 100%;
   height: 70px;
+  z-index: 1;
+  box-shadow: 0px 1px 22px -3px rgba(0,0,0,0.65);
 
   .item {
     text-align: center;
