--- a/playground-10-4-17/styles/navbar.scss
+++ b/playground-10-4-17/styles/navbar.scss
@@ -14,6 +14,8 @@ Description: modular grid template for navigation bar
   grid-template-columns: repeat(12, 1fr);
   width: 100%;
   height: 70px;
+  z-index: 1;
+  box-shadow: 0px 1px 22px -3px rgba(0,0,0,0.65);
 
   .item {
     text-align: center;
@@ -32,32 +34,4 @@ Description: modular grid template for navigation bar
   .nav-empty {
       grid-column: span 4;
   }
-}
-
-//-------------------------------FOR MOBILE------------------------------------
-
-@media only screen and (max-width: 768px) {
-
-  .navbar-wrapper-mobile {
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    width: 100%;
-    height: 70px;
-
-    .item {
-      text-align: center;
-      padding: 10px;
-      line-height: 45px;
-    }
-
-    .nav-home {}
-
-    .nav-portfolio {}
-
-    .nav-resume {}
-
-    .nav-blog {}
-  }
-
 }
