--- a/playground-10-4-17/styles/portfolio-styles-compiled.css
+++ b/playground-10-4-17/styles/portfolio-styles-compiled.css
@@ -15,7 +15,7 @@ Description: Mobile styles for home page
 */
 @media only screen and (max-width: 768px) {
   .navbar-wrapper {
-    visibility: hidden; }
+    display: none; }
 
   body {
     margin: 0px;
@@ -24,34 +24,23 @@ Description: Mobile styles for home page
   /*the only thing needing to be specified for the navbar template are the
    main and accent colors soecified below*/
   /*
-  Developer: Trenton Brew
-  Date: 10/4/2017
-  Description: modular grid template for navigation bar
+  Developer: Trent Brew
+  Date: 10/6/17
+  Description: navbar styles for mobile
   */
-  .navbar-wrapper {
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    width: 100%;
-    height: 70px; }
-    .navbar-wrapper .item {
-      text-align: center;
-      padding: 10px;
-      line-height: 45px; }
-    .navbar-wrapper .nav-empty {
-      grid-column: span 4; } }
-@media only screen and (max-width: 768px) and (max-width: 768px) {
   .navbar-wrapper-mobile {
     position: fixed;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     width: 100%;
-    height: 70px; }
+    height: 70px;
+    z-index: 1;
+    box-shadow: 0px 1px 22px -3px rgba(0, 0, 0, 0.65); }
     .navbar-wrapper-mobile .item {
       text-align: center;
       padding: 10px;
-      line-height: 45px; } }
-@media only screen and (max-width: 768px) {
+      line-height: 45px; }
+
   .navbar-wrapper-mobile {
     background-color: #EEEEEE; }
     .navbar-wrapper-mobile a {
@@ -63,7 +52,14 @@ Description: Mobile styles for home page
       color: #616161; }
       .navbar-wrapper-mobile .item:hover {
         background-color: #E0E0E0;
-        color: #00BCD4; } }
+        color: #00BCD4; }
+
+  .content-example {
+    position: absolute;
+    background-color: gray;
+    width: 100%;
+    height: 1200px;
+    top: 70px; } }
 @media only screen and (min-width: 768px) {
   .navbar-wrapper-mobile {
     visibility: hidden; }
@@ -84,25 +80,16 @@ Description: Mobile styles for home page
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     width: 100%;
-    height: 70px; }
+    height: 70px;
+    z-index: 1;
+    box-shadow: 0px 1px 22px -3px rgba(0, 0, 0, 0.65); }
     .navbar-wrapper .item {
       text-align: center;
       padding: 10px;
       line-height: 45px; }
     .navbar-wrapper .nav-empty {
-      grid-column: span 4; } }
-@media only screen and (min-width: 768px) and (max-width: 768px) {
-  .navbar-wrapper-mobile {
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    width: 100%;
-    height: 70px; }
-    .navbar-wrapper-mobile .item {
-      text-align: center;
-      padding: 10px;
-      line-height: 45px; } }
-@media only screen and (min-width: 768px) {
+      grid-column: span 4; }
+
   .navbar-wrapper {
     background-color: #EEEEEE; }
     .navbar-wrapper a {
